feat: [CDS-46434]: Supporting multiline in additional fields of SNOW (#42818)